--- a/Project/index.html
+++ b/Project/index.html
@@ -3,185 +3,160 @@
     <head>
         <meta charset="utf-8">
         <title>The Space Station | Resort</title>
+        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="">
     </head>
     <body>
 
         <!-- NAV -->
-        <div>
-            <div>
-                <ul>
-                    <a href="#home" id="link"><li>HOME</li></a>
+        <div class="wrap">
+            <div class="menu-container">
+                <ul class="menu">
+                    <a href="#home"><li>HOME</li></a>
                     <a href="#gallery"><li>GALLERY</li></a>
                     <a href="#contact"><li>RESERVATIONS</li></a>
                 </ul>
             </div>
         </div>
-        <!--END NAV -->
+        <!-- NAV -->
 
         <!--HOME -->
         <div id="home">
-            <div>
-                <div>
-                    <span>The Space Station</span>
+            <div class="container">
+                <div class="text-center">
+                    <span class="head-main">The Space Station</span>
                 </div>
             </div>
         </div>
         <!--END HOME -->
 
-        <!-- GALLERY -->
-        <section>
-            <div id="gallery">
+        <!--GALLERY-->
+        <section id="gallery">
+            <div class="container">
                 <h1>Gallery</h1>
-                <div>
+                <div class="flex-container">
 
-                    <!--PHOTO-CONTAINER 1 -->
-                    <div>
-                        <div>
-                            <img src="./images/thumb/thumbnail_1.jpeg" alt="Space Image">
-                            <div>
+                    <!--PHOTO CONTAINER 1-->
+                    <div class="phot-container">
+                        <div class="photo">
+                            <img src="./images/thumb/thumbnail_1.jpeg" alt="">
+                            <div class="photo-overlay">
                                 <h3>Click to Enlarge</h3>
                                 <p>We have several space launches departing daily, book your flight today!</p>
                             </div>
                         </div>
                     </div>
-                    <!--END PHOTO-CONTAINER 1 -->
+                    <!--END PHOTO CONTAINER 1-->
 
-                    <!--PHOTO-CONTAINER 2 -->
-                    <div>
-                            <div>
-                                <img src="./images/thumb/thumbnail_2.jpeg" alt="Space Image">
-                                <div>
+                    <!--PHOTO CONTAINER 2-->
+                    <div class="phot-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_2.jpeg" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>We have several space launches departing daily, book your flight today!</p>
                                 </div>
                             </div>
                         </div>
-                        <!--END PHOTO-CONTAINER 2 -->
+                        <!--END PHOTO CONTAINER 2-->
 
-                        <!--PHOTO-CONTAINER 3 -->
-                    <div>
-                            <div>
-                                <img src="./images/thumb/thumbnail_3.jpeg" alt="Space Image">
-                                <div>
+                        <!--PHOTO CONTAINER 3-->
+                    <div class="phot-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_3.jpeg" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>We have several space launches departing daily, book your flight today!</p>
                                 </div>
                             </div>
                         </div>
-                        <!--END PHOTO-CONTAINER 3 -->
+                        <!--END PHOTO CONTAINER 3-->
 
-                        <!--PHOTO-CONTAINER 4 -->
-                    <div>
-                            <div>
-                                <img src="./images/thumb/thumbnail_4.jpeg" alt="Space Image">
-                                <div>
+                        <!--PHOTO CONTAINER 4-->
+                    <div class="phot-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_4.jpeg" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>We have several space launches departing daily, book your flight today!</p>
                                 </div>
                             </div>
                         </div>
-                        <!--END PHOTO-CONTAINER 4 -->
+                        <!--END PHOTO CONTAINER 4-->
 
-                        <!--PHOTO-CONTAINER 5 -->
-                    <div>
-                            <div>
-                                <img src="./images/thumb/thumbnail_5.jpeg" alt="Space Image">
-                                <div>
+                        <!--PHOTO CONTAINER 5-->
+                    <div class="phot-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_5.jpeg" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>We have several space launches departing daily, book your flight today!</p>
                                 </div>
                             </div>
                         </div>
-                        <!--END PHOTO-CONTAINER 5 -->
+                        <!--END PHOTO CONTAINER 5-->
 
-                        <!--PHOTO-CONTAINER 6 -->
-                    <div>
-                            <div>
-                                <img src="./images/thumb/thumbnail_6.jpeg" alt="Space Image">
-                                <div>
+                        <!--PHOTO CONTAINER 6-->
+                    <div class="phot-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_6.jpeg" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>We have several space launches departing daily, book your flight today!</p>
                                 </div>
                             </div>
                         </div>
-                        <!--END PHOTO-CONTAINER 6 -->
+                        <!--END PHOTO CONTAINER 6-->
 
-                        <!--PHOTO-CONTAINER 7 -->
-                    <div>
-                            <div>
-                                <img src="./images/thumb/thumbnail_7.jpeg" alt="Space Image">
-                                <div>
+                        <!--PHOTO CONTAINER 7-->
+                    <div class="phot-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_7.jpeg" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>We have several space launches departing daily, book your flight today!</p>
                                 </div>
                             </div>
                         </div>
-                        <!--END PHOTO-CONTAINER 7 -->
+                        <!--END PHOTO CONTAINER 7-->
 
-                        <!--PHOTO-CONTAINER 8 -->
-                    <div>
-                            <div>
-                                <img src="./images/thumb/thumbnail_8.jpeg" alt="Space Image">
-                                <div>
+                        <!--PHOTO CONTAINER 8-->
+                    <div class="phot-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_8.jpeg" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>We have several space launches departing daily, book your flight today!</p>
                                 </div>
                             </div>
                         </div>
-                        <!--END PHOTO-CONTAINER 8 -->
+                        <!--END PHOTO CONTAINER 8-->
 
-                        <!--PHOTO-CONTAINER 9 -->
-                    <div>
-                            <div>
-                                <img src="./images/thumb/thumbnail_9.jpg" alt="Space Image">
-                                <div>
+                        <!--PHOTO CONTAINER 9-->
+                    <div class="phot-container">
+                            <div class="photo">
+                                <img src="./images/thumb/thumbnail_9.jpg" alt="">
+                                <div class="photo-overlay">
                                     <h3>Click to Enlarge</h3>
                                     <p>We have several space launches departing daily, book your flight today!</p>
                                 </div>
                             </div>
                         </div>
-                        <!--END PHOTO-CONTAINER 9 -->
+                        <!--END PHOTO CONTAINER 9-->
+
                 </div>
             </div>
         </section>
-         <!-- END GALLERY-->
+        <!--END GALLERY-->
 
-         <!-- RSVP-->
-         <section>
-             <div id="contact">
-                 <div>
-                     <h1>Reservations</h1>
-                     <div>
-                         <h2><span>Your adventure is just around the moon.</span>
-                        <br />Rserve your flight today!
-                        </h2>
-                         <p>
-                            Please provide us with your basic contact information.
-                        </p>
-                        <div>
-                            <form action="" method="post">
-                                <input class="rsvp" type="text" value="First Name">
-                                <input class="rsvp" type="text" value="Last Name">
-                                <input class="rsvp" type="text" value="Email Address">
-                                <input class="rsvp" type="text" value="Phone Number">
-                                <div class="form-spacer">
-                                    <label class="terms">Terms and Conditions</label>
-                                </div>
-                                <div>
-                                    <input type="submit" value="Submit">
-                                </div>
-                            </form>
-                        </div>
-                     </div>
-                 </div>
-             </div>
-         </section>
-         <!-- END RSVP -->
-         <!-- FOOTER -->
-         <div>
-             www.thespacestation.space &nbsp;|&nbsp; &copy; 2016
-         </div>
-         <!-- END FOOTER -->
+        <!-- RSVP-->
+        <section id="contact">
+        </section>
+        <!--END RSVP-->
 
+        <!--FOOTER-->
+        <div id="footer">
+        </div>
+        <!-- END FOOTER -->
     </body>
 </html>
