Assignment 7 and Fixes

--- a/Project/index.html
+++ b/Project/index.html
@@ -37,7 +37,7 @@
                 <div class="flex-container">
 
                     <!--PHOTO CONTAINER 1-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                         <div class="photo">
                             <img src="./images/thumb/thumbnail_1.jpeg" alt="">
                             <div class="photo-overlay">
@@ -49,7 +49,7 @@
                     <!--END PHOTO CONTAINER 1-->
 
                     <!--PHOTO CONTAINER 2-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                             <div class="photo">
                                 <img src="./images/thumb/thumbnail_2.jpeg" alt="">
                                 <div class="photo-overlay">
@@ -61,7 +61,7 @@
                         <!--END PHOTO CONTAINER 2-->
 
                         <!--PHOTO CONTAINER 3-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                             <div class="photo">
                                 <img src="./images/thumb/thumbnail_3.jpeg" alt="">
                                 <div class="photo-overlay">
@@ -73,7 +73,7 @@
                         <!--END PHOTO CONTAINER 3-->
 
                         <!--PHOTO CONTAINER 4-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                             <div class="photo">
                                 <img src="./images/thumb/thumbnail_4.jpeg" alt="">
                                 <div class="photo-overlay">
@@ -85,7 +85,7 @@
                         <!--END PHOTO CONTAINER 4-->
 
                         <!--PHOTO CONTAINER 5-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                             <div class="photo">
                                 <img src="./images/thumb/thumbnail_5.jpeg" alt="">
                                 <div class="photo-overlay">
@@ -97,7 +97,7 @@
                         <!--END PHOTO CONTAINER 5-->
 
                         <!--PHOTO CONTAINER 6-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                             <div class="photo">
                                 <img src="./images/thumb/thumbnail_6.jpeg" alt="">
                                 <div class="photo-overlay">
@@ -109,7 +109,7 @@
                         <!--END PHOTO CONTAINER 6-->
 
                         <!--PHOTO CONTAINER 7-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                             <div class="photo">
                                 <img src="./images/thumb/thumbnail_7.jpeg" alt="">
                                 <div class="photo-overlay">
@@ -121,7 +121,7 @@
                         <!--END PHOTO CONTAINER 7-->
 
                         <!--PHOTO CONTAINER 8-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                             <div class="photo">
                                 <img src="./images/thumb/thumbnail_8.jpeg" alt="">
                                 <div class="photo-overlay">
@@ -133,7 +133,7 @@
                         <!--END PHOTO CONTAINER 8-->
 
                         <!--PHOTO CONTAINER 9-->
-                    <div class="phot-container">
+                    <div class="photo-container">
                             <div class="photo">
                                 <img src="./images/thumb/thumbnail_9.jpg" alt="">
                                 <div class="photo-overlay">
@@ -143,7 +143,6 @@
                             </div>
                         </div>
                         <!--END PHOTO CONTAINER 9-->
-
                 </div>
             </div>
         </section>
